@@ -1,0 +1,3 @@
+Hans Fugal wrote it.
+Von Fugal patched it. 
+Leonard Ritter (paniq) made it sound cool.
